[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["moustafa_bendjema <moustafa_bendjema@carrefour.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
SQLAlchemy = "^1.4.31"
sqlmodel = "^0.0.6"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
